Squashed commits that add more filters to a participant

--- a/src/main/webapp/app/entities/participant/participant-detail.component.html
+++ b/src/main/webapp/app/entities/participant/participant-detail.component.html
@@ -8,6 +8,10 @@
         <dd>
             <span>{{participant.email}}</span>
         </dd>
+        <dt><span>Name</span></dt>
+        <dd>
+            <span>{{participant.name}}</span>
+        </dd>
         <dt><span>Occupation</span></dt>
         <dd>
             <span>{{participant.occupation}}</span>
@@ -27,6 +31,14 @@
         <dt><span>Number Of Repositories</span></dt>
         <dd>
             <span>{{participant.numberOfRepositories}}</span>
+        </dd>
+        <dt><span>Number Of Followers</span></dt>
+        <dd>
+            <span>{{participant.followers}}</span>
+        </dd>
+        <dt><span>Number Of Following</span></dt>
+        <dd>
+            <span>{{participant.following}}</span>
         </dd>
     </dl>
 
